project-33-node-cicd-eks-gha/kustomize/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: web
